# mifare_classic

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
block/: CMakeLists.txt  block.cpp  block.h  card.cpp  card.h  main.cpp  trailer.cpp  trailer.h
src/: CMakeLists.txt  block.cpp  card.cpp  trailer.cpp
